# mining-pool

./: .env.example  .gitignore  ACTION_PLAN.md  CLAUDE.md  Cargo.toml  README.md  SPEC.md  flake.nix  justfile
.github/workflows/: ci.yml
bitcoin/: bitcoin.conf  hex_to_b58.py  sv2-tp.conf  translator.toml
pool/: Cargo.toml
pool/src/: config.rs  db.rs  jobs.rs  lib.rs  main.rs  node_ipc.rs  noise_connection.rs  rpc.rs  stratum_sv2.rs  template_client.rs
pool/tests/: jobs.rs  mine_block.rs  rpc.rs  sv1_miner.rs  sv2_server.rs  template_client.rs
pool/tests/fixtures/: block_250000.json
