[package]
name = "pool"
version = "0.1.0"
edition = "2024"

[lib]
name = "pool"
path = "src/lib.rs"

[[bin]]
name = "pool"
path = "src/main.rs"

[[bin]]
name = "keygen"
path = "src/bin/keygen.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
bitcoin = { version = "0.32", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# SV2 protocol crates (published on crates.io)
mining_sv2             = "8.0.0"
noise_sv2              = "1.4.2"
codec_sv2              = { version = "5.0.0", features = ["noise_sv2"] }
framing_sv2            = "6.0.1"
binary_sv2             = "5.0.1"
common_messages_sv2    = "7.0.0"
template_distribution_sv2 = "5.0.0"
async-channel          = "1.8"
secp256k1              = { version = "0.29", features = ["rand-std"] }
